<resources>
    <string name="app_name">Goal Control</string>
    <string name="drawer_section_tasks">Задачи</string>
    <string name="task">Задача</string>
    <string name="drawer_item_task_current">Текущие</string>
    <string name="drawer_item_task_today">Сегодня</string>
    <string name="drawer_item_task_week">Неделя</string>
    <string name="drawer_item_task_date">Дата</string>
    <string name="drawer_item_task_no_date">Без даты</string>
    <string-array name="drawer_icons_tasks">
        <item>cmd_clipboard_alert</item>
        <item>cmd_calendar_today</item>
        <item>cmd_calendar_range</item>
        <item>cmd_calendar_question</item>
        <item>cmd_calendar_remove</item>
    </string-array>
    <string name="drawer_item_main_projects_and_tasks">Проекты и задачи</string>
    <string name="drawer_item_main_categories">Категории</string>
    <string name="drawer_item_main_statistics">Статистика</string>
    <string name="drawer_item_main_archive">Архив</string>
    <string-array name="drawer_icons_main">
        <item>cmd_folder_multiple_outline</item>
        <item>cmd_format_list_bulleted</item>
        <item>cmd_chart_bar</item>
        <item>cmd_archive</item>
    </string-array>
    <string name="drawer_item_aux_settings">Настройки</string>
    <string name="drawer_item_aux_help">Помощь</string>
    <string name="drawer_item_aux_about">О программе</string>
    <string-array name="drawer_icons_aux">
        <item>cmd_help_circle_outline</item>
        <item>cmd_information_outline</item>
    </string-array>
    <string name="task_option_project">Проект</string>
    <string name="task_option_appoint">Назначать</string>
    <string name="task_option_priority">Приоритет</string>
    <string name="task_option_category">Категория</string>
    <string name="task_option_progress">Учет прогресса</string>
    <string name="task_option_chrono">Учет времени</string>
    <string name="task_option_reminder">Напоминание</string>
    <string name="task_option_comment">Примечание</string>
    <string-array name="task_option_items">
        <item>cmd-folder-multiple-outline</item>
        <item>cmd-calendar-clock</item>
        <item>gmd-low-priority</item>
        <item>gmd-label-outline</item>
        <item>gmd-trending-up</item>
        <item>gmd-timer</item>
        <item>cmd-bell-ring-outline</item>
        <item>gmd-note-add</item>
    </string-array>
    <string-array name="priorities">
        <item>Незначительный</item>
        <item>Низкий</item>
        <item>Средний</item>
        <item>Высокий</item>
        <item>Критический</item>
    </string-array>
    <string name="once">Однократно</string>
    <string name="regularly">Регулярно</string>
    <string name="assign">Назначать</string>
    <string name="week_days">Дни недели</string>
    <string name="after_sev_days">Через неск. дней</string>
    <string name="monday_short">пн</string>
    <string name="tuesday_short">вт</string>
    <string name="wednesday_short">ср</string>
    <string name="thursday_short">чт</string>
    <string name="friday_short">пт</string>
    <string name="saturday_short">сб</string>
    <string name="sunday_short">вс</string>
    <string name="not_specified">не указано</string>
    <string name="days_before_repeat">Дней до очередного повторения</string>
    <string name="repeat">Повторять</string>
    <string name="begin_date">Дата начала</string>
    <string name="time">Время</string>
    <string name="repeat_weeks">Повторять (недель)</string>
    <string name="repeat_times">Повторять (раз)</string>
    <string name="date">Дата</string>
    <string name="okay">ОК</string>
    <string name="today">сегодня</string>
    <string name="tracking_type">Тип учета</string>
    <string name="units_genitive">Единицы (род. п.)</string>
    <string name="units_short">Сокращенно</string>
    <string name="total_amount">Всего требуется</string>
    <string name="per_one_session">За одну сессию</string>
    <string name="manually">Вручную</string>
    <string name="auto">Авто</string>
    <string name="setup_list">Настроить список</string>
    <string name="cancel">Отмена</string>
    <string-array name="progress_track_mode">
        <item>Отметка о выполнении</item>
        <item>Процент выполнения</item>
        <item>Учет выполненных единиц</item>
        <item>Список пунктов</item>
        <item>Непрерывные выполнения</item>
    </string-array>
    <string-array name="chrono_track_mode">
        <item>Прямой отсчёт</item>
        <item>Обратный отсчет</item>
        <item>Интервальный таймер</item>
        <item>Не задан</item>
    </string-array>
    <string name="add_element">Добавить элемент</string>
    <string name="elements">элементов</string>
    <string name="direct_countdown">Прямой отсчёт</string>
    <string name="task_work_time">Время работы над задачей</string>
    <string name="small_break_time">Время малого перерыва</string>
    <string name="interval">Интервал</string>
    <string name="big_break_time">Время большого перерыва</string>
    <string name="countdown">Обратный отсчет</string>
    <string name="interval_timer">Интервальный таймер</string>
    <string name="value_should_not_exceed">"Значение не должно превышать "</string>
    <string name="task_icon">Иконка задачи</string>
    <string name="project">Проект</string>
    <string name="deadline">Срок выполнения</string>
    <string name="parent">Родительский</string>
    <string name="color">Цвет</string>
    <string name="pick_color">Выберите цвет</string>
    <string name="not_defined">Не задано</string>
    <string name="by_default">По умолчанию</string>
    <string name="must_implement_listener">должен реализовывать слушателя</string>
    <string name="add">Добавить</string>
    <string-array name="colors">
        <item>FF0000</item>
        <item>00FF00</item>
        <item>0000FF</item>
    </string-array>
    <string name="name">Название</string>
    <string name="delete">Удалить</string>
    <string name="category">Категория</string>
    <string name="category_lowercase">категория</string>
    <string name="err_name_not_specified">Название не указано!</string>
    <string name="do_you_really_want_to">"Вы действительно хотите "</string>
    <string name="do_delete">удалить</string>
    <string name="remind">Напомнить</string>
    <string name="custom">Произвольно</string>
    <string name="in_specified_time">В назначенное время</string>
    <string name="_5_min_before">За 5 мин</string>
    <string name="_10_min_before">За 10 мин</string>
    <string name="_15_min_before">За 15 мин</string>
    <string name="in_time_x">"В %s"</string>
    <string name="before_x">"За %s"</string>
    <string name="hours_short">ч</string>
    <string name="minutes_short">мин</string>
    <string name="common">Общие</string>
    <string name="edit">Редактировать</string>
    <string name="info">Информация</string>
    <string name="project_cannot_be_the_parent_of_itself">Проект не может быть родителем самого себя!</string>
    <string name="cannot_set_child_element_as_its_parent">Ошибка: Нельзя сделать дочерний элемент родительским!</string>
    <string name="name_should_be_unique">Имя не уникально!</string>
    <string name="delete_the_project_and_all_his_children">удалить этот проект вместе со всеми подпроектами</string>
    <string name="parent_must_implement">Родитель должен реализовывать</string>
    <string name="separator">"/"</string>
    <string name="monday_m">П</string>
    <string name="tuesday_t">В</string>
    <string name="wednesday_w">С</string>
    <string name="thursday_t">Ч</string>
    <string name="friday_f">П</string>
    <string name="saturday_s">С</string>
    <string name="sunday_s">В</string>
    <string name="percent_char">%</string>
    <string name="register_progress">Учет прогресса</string>
    <string name="specify_task_time_to_set_reminder">Для задания напоминания укажите время назначения задачи!</string>
    <string name="big_break_every">Интервалов до большого перерыва</string>
    <string name="no_big_break">Без большого перерыва</string>
    <string name="work_time_cannot_be_zero">Рабочее время не может быть равным нулю!</string>
    <string name="you_have_to_check_at_least_one_weekday">Нужно отметить хотя бы один день недели!</string>
    <string name="date_have_to_be_not_earlier_than_today">Дата должна быть не раньше сегодняшней!</string>
    <string name="at">в</string>
    <string name="repeat_lowercase">повторять</string>
    <string name="on">по</string>
    <string name="every_day">каждый день</string>
    <string name="starting">начиная с</string>
    <string name="delete_project">удалить проект</string>
    <string name="delete_task">удалить задачу</string>
    <string name="combo">"Серия: "</string>
    <plurals name="plurals_days">
        <item quantity="one">каждый %1$d день</item>
        <item quantity="few">каждые %1$d дня</item>
        <item quantity="many">каждые %1$d дней</item>
        <item quantity="other">%1$d дней</item>
    </plurals>
    <string-array name="weekdays_short">
        <item>пн</item>
        <item>вт</item>
        <item>ср</item>
        <item>чт</item>
        <item>пт</item>
        <item>сб</item>
        <item>вс</item>
    </string-array>
    <string name="progress_today">Прогресс за сегодня</string>
    <string name="percents">процентов</string>
    <string name="units">единиц</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="progress_registered">Прогресс зафиксирован!</string>
    <string name="how_did_it_happen">Как это вы умудрились?</string>
    <string name="not_bad">Неплохо!</string>
    <string name="good">Хорошо!</string>
    <string name="great">Отлично!</string>
    <string name="excellent">Превосходно!</string>
    <string name="pick_date">Выбрать дату</string>
    <string name="sort">Сортировать</string>
    <string name="filter">Фильтровать</string>
    <string-array name="sort_criterion_names">
        <item>Дата</item>
        <item>Приоритет</item>
        <item>Отставание</item>
        <item>Прогресс (ожид.)</item>
        <item>Прогресс (реал.)</item>
        <item>Задача</item>
        <item>Проект</item>
        <item>Категория</item>
    </string-array>
    <string name="icon_task">cmd-clipboard-check</string>
    <string name="icon_project">cmd-folder-outline</string>
    <string name="icon_category">cmd-label-outline</string>
    <string name="icon_priority">cmd-alert-octagon</string>
    <string name="icon_progress">cmd-chart-line</string>
    <string name="all">Все</string>
    <string name="reset">Сбросить</string>
    <string name="task_rescheduled_to">Задача перенесена на %s</string>
    <string name="cannot_move_task_to_the_past">Нельзя перенести задачу в прошлое!</string>
    <string name="task_removed">Задача удалена</string>
    <string name="task_completion_registered">Выполнение задачи зафиксировано!</string>
    <string name="remove_task_from_the_list">Исключить задачу из списка?</string>
    <string name="not_yet">Пока нет</string>
    <string name="yes">Да</string>
    <string name="break_small">Перерыв</string>
    <string name="break_big">Большой перерыв</string>
    <string name="mark_task_as_completed">отметить задачу как выполненную</string>
    <string name="remove_task">удалить задачу</string>
    <string name="no">Нет</string>
    <string name="start_task_question">Начать выполнение?</string>
    <string name="start">Начать</string>
    <string name="including_idle">Включая бездействие</string>
    <string name="undo_completion">Отменить выполнение</string>
    <string name="add_to_queued">Добавить в список текущих</string>
    <string name="remove_from_queued">Удалить из списка текущих</string>
</resources>