<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <item
        android:id="@+id/action_pick_date"
        android:title="@string/pick_date"
        android:icon="@drawable/ic_calendar"
        android:visible="false"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_add"
        android:title="@string/add"
        android:icon="@drawable/ic_toolbar_add"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_sort"
        android:title="@string/sort"
        android:icon="@drawable/ic_sort"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_filter"
        android:title="@string/filter"
        android:icon="@drawable/ic_filter"
        app:showAsAction="ifRoom" />

</menu>