<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context="app.warinator.goalcontrol.fragment.ReminderDialogFragment">

    <include layout="@layout/header_dialog_task" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:paddingBottom="@dimen/padding_vert_standard"
        android:paddingTop="@dimen/padding_vert_standard">

        <ImageView
            android:id="@+id/iv_reminder"
            android:layout_width="@dimen/icon_width_standard"
            android:layout_height="@dimen/icon_width_standard"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:padding="@dimen/padding_hor_standard"
            android:src="@drawable/ic_timer" />

        <TextView
            android:id="@+id/tv_reminder_lbl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_toEndOf="@id/iv_reminder"
            android:layout_toRightOf="@id/iv_reminder"
            android:text="@string/remind"
            android:textColor="@color/colorGrey" />

        <RadioGroup
            android:id="@+id/rg_reminder_opt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@id/tv_reminder_lbl"
            android:layout_alignStart="@id/tv_reminder_lbl"
            android:layout_below="@id/tv_reminder_lbl"
            android:layout_marginTop="@dimen/padding_vert_standard">

            <RadioButton
                android:id="@+id/rb_specified_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/in_specified_time" />

            <RadioButton
                android:id="@+id/rb_5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_5_min_before" />

            <RadioButton
                android:id="@+id/rb_10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_10_min_before" />

            <RadioButton
                android:id="@+id/rb_15"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_15_min_before" />

            <RadioButton
                android:id="@+id/rb_custom"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/icon_width_standard"
                android:layout_gravity="center_vertical"
                android:layout_marginRight="@dimen/padding_hor_standard"
                android:text="@string/custom" />
        </RadioGroup>
        <ImageButton
            android:id="@+id/btn_edit_custom"
            android:layout_alignBottom="@id/rg_reminder_opt"
            android:layout_width="@dimen/icon_width_standard"
            android:layout_height="@dimen/icon_width_standard"
            android:background="?android:attr/selectableItemBackground"
            android:src="@drawable/ic_edit_accent" />

    </RelativeLayout>

</LinearLayout>
