<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              tools:context="app.warinator.goalcontrol.fragment.CategoryEditDialogFragment">

    <include layout="@layout/header_dialog_task"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/padding_vert_standard"
        android:orientation="vertical"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/padding_vert_standard"
            android:paddingTop="@dimen/padding_vert_standard">

            <EditText
                android:id="@+id/et_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name"/>
        </android.support.design.widget.TextInputLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/separator_vert_width"
            android:background="@drawable/line_divider"/>

        <RelativeLayout
            android:id="@+id/la_color"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:paddingBottom="@dimen/padding_vert_standard"
            android:paddingTop="@dimen/padding_vert_standard">

            <ImageView
                android:id="@+id/iv_color"
                android:layout_width="@dimen/icon_width_standard"
                android:layout_height="@dimen/icon_width_standard"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_centerInParent="false"
                android:padding="@dimen/padding_hor_standard"
                android:src="@drawable/ic_color"/>

            <TextView
                android:id="@+id/tv_color_lbl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_toEndOf="@id/iv_color"
                android:layout_toRightOf="@id/iv_color"
                android:text="@string/color"
                android:textColor="@color/colorGrey"
                android:textSize="@dimen/text_size_large"/>
        </RelativeLayout>

        <View
            android:id="@+id/separator"
            android:layout_width="match_parent"
            android:layout_height="@dimen/separator_vert_width"
            android:background="@drawable/line_divider"/>

        <Button
            android:id="@+id/btn_delete"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="@dimen/padding_vert_standard"
            android:text="@string/delete"
            android:textColor="@color/accent"/>
    </LinearLayout>

</LinearLayout>
